# qt-json-editor

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/qt-json-editor/: qt-json-editor.hpp
source/: qt-json-editor.cpp
test/: CMakeLists.txt
test/source/: qt-json-editor_test.cpp
